<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_sc2">StarCraft2</string>
    <string name="text_about">About</string>
    <string name="text_terran">Terran</string>
    <string name="text_zerg">Zerg</string>
    <string name="text_protoss">Protoss</string>
    <string name="text_settings">Settings</string>
    <string name="title_activity_sc2">Sc2Activity</string>
    <string name="title_activity_terran">TerranActivity</string>
    <string name="name">ListViewBaseAdapter</string>
    <string name="image">Thumbnail</string>
    <string name="title_activity_ImageTextListView">ImageTextListViewActivity</string>

</resources>
